documentation for user register
